fix cut off emoji

--- a/src/app/components/Sidebar/sidebar.css
+++ b/src/app/components/Sidebar/sidebar.css
@@ -1,5 +1,9 @@
 .root li {
   list-style: none;
+
+  a {
+    padding: 10px;
+  }
 }
 
 .sidebar {
